[metadata]
name = sql-client
version = 0.4.1-alpha.1
license = Apache-2.0
author = QuantTide Inc.
author_email = tech@quanttide.com

[options]
packages = find:
package_dir =
    =sql_client

[options.packages.find]
where = sql_client

[options.extras_require]
sqlalchemy = sqlalchemy; tablib
# MySQL
mysqlclient = mysqlclient
pymysql = pymysql
mysql = mysqlclient
# PostgreSQL
postgresql = psycopg2
pgsql = psycopg2
psycopg2 = psycopg2
psycopg2-binary = psycopg2-binary
# SQLServer
sqlserver = pymssql
mssql = pymssql
pymssql = pymssql
# Oracle
oracle = cx_Oracle
cx_Oracle = cx_Oracle